<resources>
    <string name="app_name">Reds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">john@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="property">Property</string>
    <string name="menu_report">Report</string>
    <string name="menu_customer">Customer</string>
    <string name="username_email">Username/Email</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="bedroom">Bedrrom</string>
    <string name="bathroom">Bathroom</string>
    <string name="floor">Floors</string>
    <string name="hold">Hold</string>
    <string name="sold">Sold</string>
    <string name="type">Type</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="shophouse">Shophouse</string>
    <string name="home_office">Home Office</string>
    <string name="land">Tanah</string>
    <string name="manufactured_home">Rumah Produksi</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="image_property">Image Property</string>
    <string name="area">Area</string>
    <string name="surface_area">Surface Area</string>
    <string name="surface_area_value">500 m<sup><small>2</small></sup></string>
    <string name="building_area">Building Area</string>
    <string name="building_area_value">650 m<sup><small>2</small></sup></string>
    <string name="price_value">Rp. 2.000.000.000</string>
    <string name="house_name_value">Rumah Mewah Modern Minimalis Pusat Kota</string>
    <string name="location_value">Menteng, Jakarta Pusat</string>
    <string name="slide_image">Slide Image</string>
    <string name="bedroom_value">4</string>
    <string name="bathroom_value">3</string>
    <string name="detail_property">Detail Property</string>
    <string name="floor_value">2</string>
    <string name="facility">Facility</string>
    <string name="facilities">Facilities</string>
    <string name="type_value">Rumah</string>

    <string name="facility_value">AC, Carport, Garasi, Taman, Air Sumur dan PAM, Dapur Bersih dan Dapur Kotor</string>
    <string name="description">Description</string>
    <string name="description_value">- jl. raya menteng no. 1\n- Kondisi rumah baru\n- Full Furnished</string>
    <string name="address_value">jl. raya menteng no. 1</string>
    <string name="status_value">Available</string>
    <string name="pay">Buy Property</string>
    <string name="developer_value">Reds Developer</string>
    <string name="phone_developer_value">081234567890</string>
    <string name="developer">Developer / Agent</string>
    <string name="property_list">Property List</string>
    <string name="notification">Notifications</string>
    <string name="chat">Messages</string>
    <string name="transaction_progress">Transaction Progress</string>
    <string name="account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="report">Report</string>
    <string name="account_image">Account Image</string>
    <string name="account_name">John Doe</string>
    <string name="account_email">John@mail.com</string>
    <string name="report_daily">Daily Report</string>
    <string name="report2_daily">Monthly Report</string>
    <string name="back">Back</string>
    <string name="my_account">My Account</string>
    <string name="customer">Customer</string>

    <string name="edit_account">Edit Account</string>
    <string name="siteplan">Site Plan</string>
    <string name="primary">Primary</string>
    <string name="personal">Personal</string>
    <string name="presentation">Presentation</string>
    <string name="select_mode">Select Mode</string>
    <string name="primary_list">Primary List</string>
    <string name="personal_list">Personal List</string>
    <string name="see_all">See All</string>
    <string name="filter">Filter</string>
    <string name="search_property">Search name, location </string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="price_range">Price Range</string>
    <string name="bedrooms">Bedroom(s)</string>
    <string name="type_property">Property Types</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="min_price">Rp 100.000.000</string>
    <string name="max_price">Rp 50.000.000.000+</string>
    <string name="all">All</string>
    <string name="villa">Villa</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4+</string>
    <string name="image_facility">Image Facility</string>
    <string name="choose_unit">Choose Unit</string>
    <string name="unit_a">UNIT A</string>
    <string name="unit_b">UNIT B</string>
    <string name="unit_d">UNIT D (SOLD)</string>
    <string name="unit_c">UNIT C (HOLD)</string>
    <string name="the_ciumbuleuit_residences_unit">The Ciumbuleuit Residences Unit</string>
    <string name="rent">Rent</string>
    <string name="time_period">Time Period</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="owner">Owner</string>
    <string name="call">Call</string>
    <string name="image">Image</string>
    <string name="pt_sukses_properti_indo">PT Sukses Properti Indo</string>
    <string name="rent_list">Rent List</string>
    <string name="create_customer">Create Customer</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="escrow">Escrow</string>
    <string name="mpos">MPOS</string>
    <string name="payment_type">Payment Type</string>
    <string name="checkout">Checkout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="customer_data">Data Customer</string>

</resources>
