<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_property"
        android:icon="@drawable/ic_location_city"
        android:title="@string/property" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_assessment"
        android:title="@string/menu_report" />

    <item
        android:id="@+id/nav_customer"
        android:icon="@drawable/ic_people"
        android:title="@string/menu_customer" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>