<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_broker_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_broker_property"
        android:icon="@drawable/ic_location_city"
        android:title="@string/property" />

    <item
        android:id="@+id/nav_broker_primary"
        android:icon="@drawable/ic_star"
        android:title="@string/primary" />

    <item
        android:id="@+id/nav_broker_personal"
        android:icon="@drawable/ic_assessment"
        android:title="@string/personal" />

    <item
        android:id="@+id/nav_broker_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

</menu>